; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_timestamp.c_isoweekdate2date.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_timestamp.c_isoweekdate2date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @isoweekdate2date(i32 %0, i32 %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @isoweek2j(i32 %13, i32 %14)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp sgt i32 %16, 1
  br i1 %17, label %18, label %23

18:                                               ; preds = %5
  %19 = load i32, i32* %7, align 4
  %20 = sub nsw i32 %19, 2
  %21 = load i32, i32* %11, align 4
  %22 = add nsw i32 %21, %20
  store i32 %22, i32* %11, align 4
  br label %26

23:                                               ; preds = %5
  %24 = load i32, i32* %11, align 4
  %25 = add nsw i32 %24, 6
  store i32 %25, i32* %11, align 4
  br label %26

26:                                               ; preds = %23, %18
  %27 = load i32, i32* %11, align 4
  %28 = load i32*, i32** %8, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = call i32 @j2date(i32 %27, i32* %28, i32* %29, i32* %30)
  ret void
}

declare dso_local i32 @isoweek2j(i32, i32) #1

declare dso_local i32 @j2date(i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
